crates/apollo-compiler/test_data/diagnostics/0087_fragment_type_condition_on_composite_types.txt
Error: subselection set for scalar and enum types must be empty
   ╭─[0087_fragment_type_condition_on_composite_types.graphql:5:5]
   │
 5 │     price { ...fragOnScalar }
   │     ────────────┬────────────  
   │                 ╰────────────── field `price` of type `Int` is a scalar and cannot select any fields
───╯
Error: fragments can not be declared on primitive types
   ╭─[0087_fragment_type_condition_on_composite_types.graphql:7:5]
   │
 7 │ ╭─▶     ... on Int {
   ┆ ┆   
 9 │ ├─▶     }
   │ │           
   │ ╰─────────── fragment declares unsupported type condition `Int`
   │     
   │     Help: fragments cannot be defined on enums, scalars and input objects
───╯
Error: fragments can not be declared on primitive types
    ╭─[0087_fragment_type_condition_on_composite_types.graphql:26:3]
    │
 26 │ ╭─▶   ... on Int {
    ┆ ┆   
 28 │ ├─▶   }
    │ │         
    │ ╰───────── fragment declares unsupported type condition `Int`
    │     
    │     Help: fragments cannot be defined on enums, scalars and input objects
────╯

